--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,7 @@ pydantic>=2.11.7,<3.0.0
 pydantic-settings==2.6.1
 httpx==0.28.1
 python-multipart==0.0.20
+langchain==1.1.0
+langgraph==1.0.3
+langchain-openai==1.1.0
+langchain-core==1.1.0
