--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,53 @@
+ag-ui-langgraph==0.0.22
+ag-ui-protocol==0.1.10
+annotated-types==0.7.0
+anyio==4.11.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+distro==1.9.0
+dotenv==0.9.9
 fastapi==0.115.5
-uvicorn[standard]==0.32.1
-python-dotenv==1.0.1
-pydantic>=2.11.7,<3.0.0
-pydantic-settings==2.6.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
 httpx==0.28.1
-python-multipart==0.0.20
+idna==3.11
+jiter==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
 langchain==1.1.0
-langgraph==1.0.3
-langchain-openai==1.1.0
 langchain-core==1.1.0
+langchain-openai==1.1.0
+langgraph==1.0.3
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.2.10
+langsmith==0.4.47
+openai==2.8.1
+orjson==3.11.4
+ormsgpack==1.12.0
+packaging==25.0
+pydantic==2.12.4
+pydantic-settings==2.6.1
+pydantic_core==2.41.5
+python-dotenv==1.0.1
+python-multipart==0.0.20
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+starlette==0.41.3
+tenacity==9.1.2
+tiktoken==0.12.0
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.32.1
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+xxhash==3.6.0
+zstandard==0.25.0
