--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,24 @@
 FROM node:20-alpine
 
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@latest --activate
+
 WORKDIR /app
 
-COPY package*.json ./
+# Copy package files
+COPY package.json pnpm-lock.yaml ./
 
-RUN pnpm install
+# Install dependencies
+RUN pnpm install --frozen-lockfile --prod
+
+# Copy application code
 COPY . .
 
-RUN pnpm build
+# Build the application
+RUN pnpm run build
+
+# Expose port
 EXPOSE 3000
 
-CMD ["npm", "start"]
+# Start the application
+CMD ["pnpm", "start"]
