--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,14 @@
-ag-ui-langgraph==0.0.22
+ag-ui-langgraph==0.0.21
 ag-ui-protocol==0.1.10
 annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+copilotkit==0.1.72
 distro==1.9.0
 dotenv==0.9.9
-fastapi==0.115.5
+fastapi==0.115.12
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -19,6 +20,7 @@ jsonpointer==3.0.0
 langchain==1.1.0
 langchain-core==1.1.0
 langchain-openai==1.1.0
+langchain-sambanova==1.0.0
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
@@ -31,6 +33,7 @@ packaging==25.0
 pydantic==2.12.4
 pydantic-settings==2.6.1
 pydantic_core==2.41.5
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -38,6 +41,7 @@ regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 sniffio==1.3.1
+sqlalchemy==2.0.36
 starlette==0.41.3
 tenacity==9.1.2
 tiktoken==0.12.0
