--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,15 @@
 FROM node:20-alpine
-
-# Install pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
 WORKDIR /app
 
-# Copy package files
 COPY package.json pnpm-lock.yaml ./
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile --prod
+RUN pnpm install --frozen-lockfile
 
-# Copy application code
 COPY . .
 
-# Build the application
-RUN pnpm run build
-
-# Expose port
 EXPOSE 3000
 
-# Start the application
-CMD ["pnpm", "start"]
+# Due to thread streaming bug running it in dev mode ., 
+CMD ["pnpm", "dev"]
