--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ ag-ui-langgraph==0.0.21
 ag-ui-protocol==0.1.10
 annotated-types==0.7.0
 anyio==4.11.0
+arize-phoenix
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
@@ -27,6 +28,7 @@ langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.10
 langsmith==0.4.47
 openai==2.8.1
+openinference-instrumentation-langchain
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
