--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ag-ui/client": "0.0.40-alpha.7",
+    "@ag-ui/core": "0.0.40-alpha.7",
+    "@ag-ui/langgraph": "^0.0.19",
     "@copilotkit/react-core": "^1.10.6",
     "@copilotkit/react-ui": "^1.10.6",
     "@copilotkit/runtime": "^1.10.6",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "recharts": "^3.5.1",
+    "why-is-node-running": "^3.2.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
