--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@copilotkit/react-core": "^1.10.6",
     "@copilotkit/react-ui": "^1.10.6",
     "@copilotkit/runtime": "^1.10.6",
+    "@copilotkit/runtime-client-gql": "^1.10.6",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
