--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
-# Phoenix Tracing Configuration
-PHOENIX_PROJECT_NAME=bank-agent
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DATABASE?sslmode=require&channel_binding=require
+
+OPENAI_API_KEY=YOUR_OPENAI_API_KEY
+DEFAULT_MODEL=gpt-4-turbo
+
+SAMBANOVA_API_KEY=YOUR_SAMBANOVA_API_KEY
+
 PHOENIX_ENDPOINT=http://localhost:6006/v1/traces
-
-# OpenAI API Key
-OPENAI_API_KEY=your_openai_api_key_here
-
-# SambaNova API Key
-SAMBANOVA_API_KEY=your_sambanova_api_key_here
-
-# Database Configuration
-DATABASE_URL=XXXX
-
-
+PHOENIX_PROJECT_NAME=bank-agent
+PHOENIX_SPACE_ID=YOUR_PHOENIX_SPACE_ID
+PHOENIX_API_KEY=YOUR_PHOENIX_API_KEY
