--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ ag-ui-protocol==0.1.10
 annotated-types==0.7.0
 anyio==4.11.0
 arize-phoenix
+arize-otel
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
@@ -56,4 +57,124 @@ uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
 xxhash==3.6.0
+zstandard==0.25.0
+ag-ui-langgraph==0.0.21
+ag-ui-protocol==0.1.10
+aioitertools==0.13.0
+aiosqlite==0.21.0
+alembic==1.17.2
+annotated-types==0.7.0
+anyio==4.11.0
+arize-otel==0.11.0
+arize-phoenix==12.18.0
+arize-phoenix-client==1.26.0
+arize-phoenix-evals==2.6.1
+arize-phoenix-otel==0.14.0
+Authlib==1.6.5
+cachetools==6.2.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+copilotkit==0.1.72
+cryptography==46.0.3
+distro==1.9.0
+dnspython==2.8.0
+dotenv==0.9.9
+email-validator==2.3.0
+fastapi==0.115.12
+googleapis-common-protos==1.72.0
+graphql-core==3.2.7
+greenlet==3.2.4
+grpc-interceptor==0.15.4
+grpcio==1.76.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
+idna==3.11
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+jiter==0.12.0
+jmespath==1.0.1
+joblib==1.5.2
+jsonpatch==1.33
+jsonpath-ng==1.7.0
+jsonpointer==3.0.0
+langchain==1.1.0
+langchain-core==1.1.0
+langchain-openai==1.1.0
+langchain-sambanova==1.0.0
+langgraph==1.0.3
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.2.10
+langsmith==0.4.47
+Mako==1.3.10
+MarkupSafe==3.0.3
+numpy==2.3.5
+openai==2.8.1
+openinference-instrumentation==0.1.42
+openinference-instrumentation-langchain==0.1.55
+openinference-semantic-conventions==0.1.25
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-exporter-otlp-proto-http==1.38.0
+opentelemetry-instrumentation==0.59b0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+orjson==3.11.4
+ormsgpack==1.12.0
+packaging==25.0
+pandas==2.3.3
+partialjson==0.0.8
+ply==3.11
+prometheus_client==0.23.1
+protobuf==6.33.1
+psutil==7.1.3
+psycopg2==2.9.11
+psycopg2-binary==2.9.10
+pyarrow==22.0.0
+pycparser==2.23
+pydantic==2.12.4
+pydantic-settings==2.6.1
+pydantic_core==2.41.5
+pystache==0.6.8
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+sambanova==1.2.0
+scikit-learn==1.7.2
+scipy==1.16.3
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlean.py==3.50.4.5
+starlette==0.41.3
+strawberry-graphql==0.270.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+toml==0.10.2
+tqdm==4.67.1
+types-requests==2.32.4.20250913
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.32.1
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+wrapt==1.17.3
+xxhash==3.6.0
+zipp==3.23.0
 zstandard==0.25.0
