--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,3 @@
-Authlib==1.6.5
-Jinja2==3.1.6
-Mako==1.3.10
-MarkupSafe==3.0.3
-PyYAML==6.0.3
-SQLAlchemy==2.0.36
 ag-ui-langgraph==0.0.21
 ag-ui-protocol==0.1.10
 aioitertools==0.13.0
@@ -11,11 +5,13 @@ aiosqlite==0.21.0
 alembic==1.17.2
 annotated-types==0.7.0
 anyio==4.11.0
+arize==7.51.1
 arize-otel==0.11.0
 arize-phoenix==12.18.0
 arize-phoenix-client==1.26.0
 arize-phoenix-evals==2.6.1
 arize-phoenix-otel==0.14.0
+Authlib==1.6.5
 cachetools==6.2.2
 certifi==2025.11.12
 cffi==2.0.0
@@ -39,6 +35,7 @@ httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 importlib_metadata==8.7.0
+Jinja2==3.1.6
 jiter==0.12.0
 jmespath==1.0.1
 joblib==1.5.2
@@ -54,6 +51,8 @@ langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
 langgraph-sdk==0.2.10
 langsmith==0.4.47
+Mako==1.3.10
+MarkupSafe==3.0.3
 numpy==2.3.5
 openai==2.8.1
 openinference-instrumentation==0.1.42
@@ -77,6 +76,7 @@ ply==3.11
 prometheus_client==0.23.1
 protobuf==6.33.1
 psutil==7.1.3
+psycopg2==2.9.11
 psycopg2-binary==2.9.10
 pyarrow==22.0.0
 pycparser==2.23
@@ -88,15 +88,18 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2025.2
+PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
+requests-futures==1.0.0
 requests-toolbelt==1.0.0
 sambanova==1.2.0
 scikit-learn==1.7.2
 scipy==1.16.3
 six==1.17.0
 sniffio==1.3.1
-sqlalchemy==2.0.36
+SQLAlchemy==2.0.36
+sqlean.py==3.50.4.5
 starlette==0.41.3
 strawberry-graphql==0.270.1
 tenacity==9.1.2
