--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,22 +47,22 @@ services:
       - banking-network
     restart: unless-stopped
   # Frontend (Next.js + CopilotKit)
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   container_name: banking-frontend
-  #   depends_on:
-  #     - backend
-  #   environment:
-  #     NEXT_PUBLIC_API_URL: http://localhost:8000
-  #     NEXT_PUBLIC_WS_URL: ws://localhost:8000
-  #     BACKEND_URL: http://backend:8000
-  #   ports:
-  #     - "3000:3000"
-  #   networks:
-  #     - banking-network
-  #   restart: unless-stopped
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: banking-frontend
+    depends_on:
+      - backend
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:8000
+      NEXT_PUBLIC_WS_URL: ws://localhost:8000
+      BACKEND_URL: http://backend:8000
+    ports:
+      - "3000:3000"
+    networks:
+      - banking-network
+    restart: unless-stopped
 
   # Phoenix Observability
   phoenix:
