--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -69,4 +69,4 @@ ENV HOSTNAME "0.0.0.0"
 
 # server.js is created by next build from the standalone output
 # https://nextjs.org/docs/pages/api-reference/next-config-js/output
-CMD ["pnpm", "run", "start"]
+CMD ["node", "server.js"]
