--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,11 @@ postgres_data/
 .pytest_cache/
 .coverage
 htmlcov/
+
+# Deepeval
+.deepeval-cache.json
+.deepeval/
+temp_test_run_data.json
+backend/.deepeval/.deepeval-cache.json
+/backend/evaluations/results
+/backend/.deepeval
